test/tests/BadOverride.frost
@extendable
class Super {
    @extendable
    function foo():String {
        return "Hello"
    }

    function bar():String {
        return "Goodbye"
    }
}

class Sub1 : Super {
    @override
    method foo():Int {
        return 42
    }
}

class Sub2 : Super {
    @override
    method foo():String {
        return "Hello"
    }
}

class Sub3 : Super {
    @override
    function bar():String {
        return "Hello"
    }
}